--- a/Side1/CSS/fil.css
+++ b/Side1/CSS/fil.css
@@ -242,30 +242,27 @@ footer {
 .Footer-info {
 display: grid;
 grid-template-columns: 1fr 2fr 1fr;
-height: 250px;
+height: 450px;
 text-align: center;
 align-items: center;
 }
 
 .Links{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   width: 20px;
-  column-gap: 20px;
+  row-gap: 20px;
   margin-top: 50px;
   line-height: 2em;
-  text-align: end;
-  font-size: 25px;
+  font-size: 35px;
+  padding-left: 20%;
 }
 
 .Links a{
   color: dodgerblue;
   font-weight: 700;
   text-decoration: none;
-}
-
-.Socials{
-  
 }
 
 .footer-area-3{
@@ -275,4 +272,13 @@ align-items: center;
 
 #twitter-logo, #facebook-logo, #instagram-logo {
   height: 30px;
+}
+
+#adresse-kart{
+  height: 200px;
+  margin-top: 30px;  
+}
+
+#adresse-kart:hover{
+  zoom: 1.2;
 }
