--- a/Side2/CSS/Booking.css
+++ b/Side2/CSS/Booking.css
@@ -14,16 +14,16 @@ body {
     position: relative;
     display: inline-block;
     text-align: center;
-  }
+}
   
-  .Main-Title{
+.Main-Title{
     position: relative;
     text-shadow: 5px 5px 10px black;
     letter-spacing: 3px;
     color:#c0392b;
     font-size: 46px;
     top: 20%;
-  }
+}
 
 
 .navbar {
@@ -33,14 +33,14 @@ body {
     text-align: center;
     display: inline-block;
     align-items: center;
-  }
+}
   
-  li {
+li {
     list-style: none;
     display: inline-block;
-  }
+}
   
-  .navbar a{
+.navbar a{
     text-decoration: none;
     font-size: 18px;
     font-family: Cambria;
@@ -49,14 +49,14 @@ body {
     padding: 20px;
     letter-spacing: 4px;
     margin: 28px 28px;
-  }
+}
   
-  .navbar a:hover{
+.navbar a:hover{
     background-color: white;
     color: #130f40;
     border-radius: 20px;
     border-style: solid;
-  }
+}
 
 .grid {
     display: grid;
@@ -65,8 +65,7 @@ body {
     column-gap: 10px;
     grid-template-rows: 1fr 1fr;
     margin-top: 50px;
-    padding: 20px;
-    
+    padding: 20px;  
 }
 
 
@@ -77,18 +76,14 @@ body {
     margin-right: auto;
     padding: 50px;
     background-color: rgb(191, 172, 149);
-    border-radius: 100%;
-    
-    
+    border-radius: 100%; 
 }
 
 .info{
     text-align: center;
     width: 75%;
     padding: 10px;
-    margin-top: 50px;
-
-    
+    margin-top: 50px; 
 }
 
 .lokasjon{
@@ -99,6 +94,10 @@ body {
 .lokasjon iframe{
     width: 400px;
     height: 400px
+}
+
+.lokasjon iframe:hover{
+    zoom: 1.4;
 }
 
 .booking{
@@ -147,7 +146,7 @@ body {
     border-radius: 4px;
     border: none;
     background-color:rgb(198, 214, 177);
-    }
+}
 
 
 .footer {
