--- a/Side3/CSS/Meny2.css
+++ b/Side3/CSS/Meny2.css
@@ -26,14 +26,18 @@ body {
   }
 
 .dropbtn {
-    background-color: #4CAF50;
+    text-decoration: none;
+    text-align: center;
+    font-size: 18px;
+    font-family: Cambria;
+    font-weight: 500;
     color: white;
-    padding: 16px;
-    font-size: 16px;
+    background-color: #c0392b;
     border: none;
-    cursor: pointer;
-    width: 100%;
-    margin-bottom: 25px;
+    padding: 10px;
+    letter-spacing: 4px;
+    margin: 28px 28px;
+
   }
   
  /* The container <div> - needed to position the dropdown content */
@@ -44,22 +48,26 @@ body {
   
  /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
-    display: none;
+    display:none;
     position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
+    background-color: #c0392b;
+    min-width: 250px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     width: 100%;
     text-align: center;
+    border: solid black 2px;
+    border-radius: 20px;
   }
   
   /* Links inside the dropdown */
-.dropdown-content a, .Åpningstider {
+.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    text-align: center;
+    align-items: center;
   }
   
   /* Change color of dropdown links on hover */
@@ -72,7 +80,7 @@ body {
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: #c0392b;
   }
 
 .navbar {
@@ -83,11 +91,13 @@ body {
     display: inline-block;
     align-items: center;
   }
-  
+
 li {
     list-style: none;
     display: inline-block;
   }
+
+  
   
 .navbar a{
     text-decoration: none;
@@ -95,9 +105,9 @@ li {
     font-family: Cambria;
     font-weight: 500;
     color: white;
-    padding: 20px;
+    padding: 10px;
     letter-spacing: 4px;
-    margin: 28px 28px;
+    margin: 38px 38px;
   }
   
 .navbar a:hover{
@@ -210,7 +220,7 @@ li {
     grid-row-end: 6;
 }
 
-.footer {
+footer {
     display: block;
     bottom: 0;
     background-color: antiquewhite;
@@ -218,26 +228,10 @@ li {
     height: 150px;
 }
 
-.footer p {
+footer p {
     text-align: center;
     padding-top: 28px;
     font-size: 24px;
 }
 
-.p1 {
-    font-family: Cambria;
-    font-weight: 200;
-    width: 100%;
-    height: 800px;
-    position: relative;
-    background-color: white;
-    top: 450px;
-    font-size: 40px;
-    line-height: 50px;
-}
 
-.p1 h2 {
-    font-size: 50px;
-    text-decoration: underline;
-    padding-bottom: 50px;
-}
