--- a/Side2/CSS/Booking.css
+++ b/Side2/CSS/Booking.css
@@ -41,14 +41,15 @@ li {
 }
   
 .navbar a{
-    text-decoration: none;
-    font-size: 18px;
-    font-family: Cambria;
-    font-weight: 500;
-    color: white;
-    padding: 20px;
-    letter-spacing: 4px;
-    margin: 28px 28px;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: Cambria;
+  font-weight: 500;
+  color: white;
+  padding: 20px;
+  letter-spacing: 4px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
   
 .navbar a:hover{
