--- a/Side5/CSS/fil.css
+++ b/Side5/CSS/fil.css
@@ -48,7 +48,9 @@ li {
   color: white;
   padding: 20px;
   letter-spacing: 4px;
-  margin: 28px 28px;
+  margin-left: 30px;
+  margin-right: 30px;
+   
 }
 
 .navbar a:hover{
