--- a/Side3/CSS/Meny2.css
+++ b/Side3/CSS/Meny2.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(189, 152, 113);
+    background-color: beige;
+    rgb(189, 152, 113);
 }
 
 .Header-Image {
@@ -37,7 +38,6 @@ body {
     padding: 20px;
     letter-spacing: 4px;
     margin-left: 48px;
-
   }
   
  /* The container <div> - needed to position the dropdown content */
@@ -73,6 +73,7 @@ body {
 .dropdown-content a:hover {
     background-color: #f1f1f1;
     border-style: solid;
+    margin: 20px 20px; 
 }
   
   /* Show the dropdown menu on hover */
@@ -113,7 +114,7 @@ li {
     margin-right: 30px;
   }
   
-.navbar a:hover{
+.navbar a:hover, .dropbtn:hover{
     background-color: white;
     color: #130f40;
     border-radius: 20px;
@@ -273,13 +274,14 @@ footer {
     bottom: 0;
     background-color: antiquewhite;
     width: 100%;
-    height: 150px;
+    height: 250px;
 }
 
 footer p {
     text-align: center;
-    padding-top: 28px;
+    padding-top: 50px;  
     font-size: 24px;
+    line-height: 1.8em;
 }
 
 
