--- a/Side4/CSS/fil.css
+++ b/Side4/CSS/fil.css
@@ -6,8 +6,8 @@ body {
 
 
 .Header-Image{
- background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/outrun-vaporwave-hd-wallpaper-thumb.jpeg);
- height: 400px;
+ background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side4/Images/giphy.gif);
+ height: 600px;
  width: 100%;
  background-position: center;
  background-repeat:no-repeat;
@@ -133,7 +133,7 @@ h2{
 .grid4{
 grid-column-start: 3;
 grid-column-end: 3;
-grid-row-start: 1;
+grid-row-start: 2;
 grid-row-end: 2;
 align-items: center;
 
@@ -147,14 +147,24 @@ align-items: center;
   line-height: 1.6em;
 }
 
+.grid1 a{
+  color:rgb(26, 106, 255);
+  text-decoration: none;
+}
+
+.grid1 a:hover{
+  zoom: 1.2;
+}
+
 .grid-img1{
-  height: 520px;
-  width: 320px;
+  height: 420px;
+  width: 340px;
   margin-right: 30px;
   margin-left: 30px;
   border-style: solid;
   border-radius: 20px;
   margin-top: 100%;
+  position: sticky;
 }
 
 .grid-img1:hover{
@@ -162,18 +172,19 @@ align-items: center;
 }
 
 .grid-img2{
-  height: 520px;
-  width: 320px;
+  height: 420px;
+  width: 340px;
   margin-right: 30px;
   margin-left: 30px;
   border-style: solid;
-  border-radius: 20px; 
-  margin-top: 170%;
+  border-radius: 20px;
+  margin-top: 10%; 
 }
 
 .grid-img2:hover{
   zoom: 1.05;
 }
+
 
 .footer-info{
   margin-top: 25px;
@@ -193,7 +204,7 @@ align-items: center;
 }
 
 footer{
-  height: 100px;
+  height: 300px;
   margin-top: 0;
 }
 
