--- a/Side2/CSS/Booking.css
+++ b/Side2/CSS/Booking.css
@@ -90,12 +90,12 @@ li {
 
 .lokasjon{
     text-align: center;
-    
 }
 
 .lokasjon iframe{
     width: 400px;
-    height: 400px
+    height: 400px;
+    border: none;
 }
 
 .lokasjon iframe:hover{
