--- a/Side3/CSS/Meny2.css
+++ b/Side3/CSS/Meny2.css
@@ -276,18 +276,43 @@ li {
 }
 
 footer {
-    display: block;
-    bottom: 0;
-    background-color: antiquewhite;
-    width: 100%;
-    height: 250px;
+    margin-top: 100px;
+    background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr ;
 }
 
+.Links{
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    width: 20px;
+    margin-top: 6%;
+    line-height: 2em;
+    font-size: 35px;
+    padding-left: 10%;
+  }
+  
+.Links a{
+    color: dodgerblue;
+    font-weight: 700;
+    text-decoration: none;
+}
+  
+.Links a:hover{
+    zoom: 1.2;
+  }
+
 footer p {
+    margin-top: 6%;
     text-align: center;
-    padding-top: 50px;  
+    padding-top: 12px;  
     font-size: 24px;
-    line-height: 1.8em;
+    line-height: 2.8em;
+    grid-column-start: 2;
+    grid-column-end: 2;
 }
 
 
