--- a/Side4/CSS/fil.css
+++ b/Side4/CSS/fil.css
@@ -7,14 +7,19 @@ body {
 
 .Header-Image{
  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side4/Images/giphy.gif);
- height: 600px;
- width: 100%;
+ height: 400px;
+ width: 70%;
  background-position: center;
  background-repeat:no-repeat;
  background-size: cover;
  position: relative;
  text-align: center;
  display: inline-block;
+ border-radius: 50px;
+ left: 15%;
+ right: 15%;
+ margin-bottom: 20px;
+ margin-top: 20px;
 }
 
 .Header-Image:hover{
@@ -147,12 +152,12 @@ align-items: center;
   line-height: 1.6em;
 }
 
-.grid1 a{
+.grid1 a, .grid3 a{
   color:rgb(26, 106, 255);
   text-decoration: none;
 }
 
-.grid1 a:hover{
+.grid1 a:hover, .grid3 a:hover{
   zoom: 1.2;
 }
 
