--- a/Side2/CSS/Booking.css
+++ b/Side2/CSS/Booking.css
@@ -102,13 +102,13 @@ li {
 }
 
 .lokasjon iframe{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     border: none;
 }
 
 .lokasjon iframe:hover{
-    zoom: 1.4;
+    zoom: 1.3;
 }
 
 .booking{
@@ -160,9 +160,70 @@ li {
 }
 
 
-.footer {
-width: 100%;
-position: absolute;
-bottom: 0;
-text-align: center;
+footer {
+    margin-top: 300px;
+    background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+}
+  
+  
+.Footer-info {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    height: 450px;
+    text-align: center;
+    align-items: center;
+}
+  
+.Links{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    width: 20px;
+    row-gap: 20px;
+    margin-top: 10px;
+    line-height: 2em;
+    font-size: 35px;
+    padding-left: 20%;
+    }
+  
+.Links a{
+    color: dodgerblue;
+    font-weight: 700;
+    text-decoration: none;
+    padding-top: 40px;
+}
+  
+.Links a:hover{
+    zoom: 1.2;
+}
+  
+#twitter-logo, #facebook-logo, #instagram-logo {
+    height: 50px;
+    margin-top: 40px;
+}
+  
+#twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
+    zoom: 1.2;
+}
+  
+  
+.footer-area-3{
+    width: 100px;
+    margin-right: 20%;
+}
+  
+  
+  
+#adresse-kart{
+    height: 200px;
+    margin-top: 30px;  
+    border: none;
+}
+  
+#adresse-kart:hover{
+    zoom: 1.2;
 }
