--- a/Side3/CSS/Meny2.css
+++ b/Side3/CSS/Meny2.css
@@ -288,19 +288,18 @@ footer {
     background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
     border-style: solid;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr ;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
 }
 
 .Links{
     display: grid;
     grid-column-start: 1;
     grid-column-end: 1;
-    width: 20px;
     margin-top: 6%;
+    margin-left: 12%;
     line-height: 2em;
     font-size: 35px;
-    padding-left: 10%;
   }
   
 .Links a{
@@ -315,8 +314,8 @@ footer {
 
 footer p {
     margin-top: 6%;
-    text-align: center;
-    padding-top: 12px;  
+    margin-right: 20px;
+    text-align: center; 
     font-size: 24px;
     line-height: 2.8em;
     grid-column-start: 2;
