--- a/Side5/CSS/fil.css
+++ b/Side5/CSS/fil.css
@@ -81,9 +81,72 @@ li {
   padding: 0;
 }
 
-footer{
+footer {
+  margin-top: 200px;
+  background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+  border-style: solid;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+
+
+.Footer-info {
+display: grid;
+grid-template-columns: 1fr 2fr 1fr;
+height: 450px;
+text-align: center;
+align-items: center;
+}
+
+.Links{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: 20px;
+  row-gap: 20px;
+  margin-top: 10px;
+  line-height: 2em;
+  font-size: 35px;
+  padding-left: 20%;
+}
+
+.Links a{
+  color: dodgerblue;
+  font-weight: 700;
+  text-decoration: none;
+  padding-top: 40px;
+}
+
+.Links a:hover{
+  zoom: 1.2;
+}
+
+#twitter-logo, #facebook-logo, #instagram-logo {
+  height: 50px;
+  margin-top: 40px;
+}
+
+#twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
+  zoom: 1.2;
+}
+
+
+.footer-area-3{
+  width: 100px;
+  margin-right: 20%;
+}
+
+
+
+#adresse-kart{
   height: 200px;
-  border-top: #c0392b 2px solid;
+  margin-top: 30px;  
+  border: none;
+}
+
+#adresse-kart:hover{
+  zoom: 1.2;
 }
 
 
