--- a/Side1/CSS/fil.css
+++ b/Side1/CSS/fil.css
@@ -1,308 +1,631 @@
-body {
-  height: 100%;
-  background-color:beige;
-  margin: 0;  
-}
-
-.Header-Image {
-  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
-  height: 50vh;
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  display: inline-block;
+@media screen and  (min-width: 1250px){
+  body {
+    height: 100%;
+    background-color:beige;
+    margin: 0;  
+  }
+  
+  .Header-Image {
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
+    height: 50vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+  }
+  
+  .Main-Title{
+    position: relative;
+    text-shadow: 5px 5px 10px black;
+    letter-spacing: 3px;
+    color:#c0392b;
+    font-size: 46px;
+    top: 20%;
+  }
+  
+  .navbar {
+    width: 100%;
+    line-height: 100px;
+    background-color: #c0392b;
+    text-align: center;
+    display: inline-block;
+    align-items: center;
+  }
+  
+  li {
+    list-style: none;
+    display: inline-block;
+  }
+  
+  .navbar a{
+    text-decoration: none;
+    font-size: 18px;
+    font-family: Cambria;
+    font-weight: 500;
+    color: white;
+    padding: 20px;
+    letter-spacing: 4px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  
+  .navbar a:hover{
+    background-color: white;
+    color: #130f40;
+    border-radius: 20px;
+    border-style: solid;
+  }
+  
+  h2{
+    text-decoration: underline;
+    text-align: center;
+  }
+  
+  .container{
+    display: grid;
+    grid-template-columns: 240px 240px 1fr;
+    margin-top: 50px;
+    line-height: 26px;
+    position: relative;
+  }
+  
+  .Restaurant-info{
+    width: 220px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 30px;
+    border-style: solid;
+    border-width: 6px;
+    border-color: #c0392b;
+    color: #c0392b;
+    border-radius: 6px;
+  }
+  
+  .Restaurant-info:hover{
+    box-shadow: 0px 10px 30px;
+    box-shadow: #c0392b;
+  }
+  
+  .Restaurant-info p{
+    font-size: 20px;
+    font-weight: 600;
+  }
+  
+  #p1{
+    position: relative;
+    margin-top: 12px;
+    margin-bottom: 80px;
+    line-height: 1.7em;
+  }
+  
+  #p2{
+   position: relative;
+   margin-top: 80px;
+   line-height: 1.7em;
+  }
+  
+  #p2 a{
+    color:cornsilk;
+    text-shadow: 5px 5px 10px black;
+  }
+  
+  #p2 a:hover{
+    zoom: 1.5;
+    text-shadow: 5px 5px 10px black;
+  }
+  
+  
+  hr {
+    width: 100%;
+  }
+  
+  .test2 {
+    height: 250px;
+    width: 250px;
+    margin-left: 22%;
+    margin-top: 400px;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 250px;
+    border-color: #c0392b;
+  }
+  
+  .test3,.test4,.test5 {
+    height: 175px;
+    width: 175px;
+    border-style: solid;
+    margin-left: 50px;
+    border-width: 3px;
+    border-radius: 175px;
+  }
+  
+  
+  .Booking-utvalg {
+    margin-left: 100px;
+    border-style: solid;
+    border-width: 6px;
+    border-radius: 6px;
+    margin-top: 30px;
+    color: #c0392b; 
+    font-size: 22px;
+    font-weight: 700;
+  }
+  
+  .Booking-utvalg:hover {
+    box-shadow: 0px 10px 30px;
+  }
+  
+  .Booking-utvalg a{
+    text-shadow: 5px 5px 10px black;
+  }
+  
+  .Booking-utvalg a:hover{
+    zoom: 1.5;
+    text-shadow: 5px 5px 10px black;
+  }
+  
+  .Bryllups-mottakelse {
+    display: grid;
+    grid-template-columns: 250px 500px;
+    row-gap: 25px;
+    column-gap: 25px;
+    padding-top: 50px;
+    align-items: center;
+  }
+  
+  .Bryllups-Info {
+    border-style:dotted;
+    border-radius: 20px;
+    border-width: 4px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: justify; 
+  }
+  
+  
+  
+  .Fest {
+    display: grid;
+    grid-template-columns: 500px 250px;
+    row-gap: 25px;
+    column-gap: 20px;
+    padding-top: 50px;
+    margin-left: 60px;
+    align-items: center;
+  }
+  
+  .Fest-Info {
+    border-style:dotted;
+    border-radius: 20px;
+    border-width: 4px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: justify;
+  }
+  
+  .Konfirmasjonsfest {
+    display: grid;
+    grid-template-columns: 250px 500px;
+    row-gap: 25px;
+    column-gap: 25px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    align-items: center;
+  }
+  
+  .Konfirmasjons-Info {
+    border-style:dotted;
+    border-radius: 20px;
+    border-width: 4px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: justify;
+  }
+  
+  .Bryllups-Info a, .Fest-Info a, .Konfirmasjons-Info a{
+    text-decoration: underline;
+    font-style: italic;
+    font-size: 28px;
+    color: azure;
+  }
+  
+  footer {
+    margin-top: 200px;
+    background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+  
+  
+  .Footer-info {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  height: 450px;
   text-align: center;
+  align-items: center;
+  }
+  
+  .Links{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    width: 20px;
+    row-gap: 20px;
+    margin-top: 10px;
+    line-height: 2em;
+    font-size: 35px;
+    padding-left: 20%;
+  }
+  
+  .Links a{
+    color: dodgerblue;
+    font-weight: 700;
+    text-decoration: none;
+    padding-top: 40px;
+  }
+  
+  .Links a:hover{
+    zoom: 1.2;
+  }
+  
+  #twitter-logo, #facebook-logo, #instagram-logo {
+    height: 50px;
+    margin-top: 40px;
+  }
+  
+  #twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
+    zoom: 1.2;
+  }
+  
+  
+  .footer-area-3{
+    width: 100px;
+    margin-right: 20%;
+  }
+  
+  
+  
+  #adresse-kart{
+    height: 200px;
+    margin-top: 30px;  
+    border: none;
+  }
+  
+  #adresse-kart:hover{
+    zoom: 1.2;
+  }
 }
 
-.Main-Title{
-  position: relative;
-  text-shadow: 5px 5px 10px black;
-  letter-spacing: 3px;
-  color:#c0392b;
-  font-size: 46px;
-  top: 20%;
-}
 
-.navbar {
-  width: 100%;
-  line-height: 100px;
-  background-color: #c0392b;
+
+
+
+@media screen and (max-width: 1249px)
+{
+  body {
+    height: 100%;
+    background-color:beige;
+    margin: 0;
+    padding: 0;  
+  }
+  
+  .Header-Image {
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
+    height: 30vh;
+    width: 100%;
+    margin-bottom: 0px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+  }
+  
+  .Main-Title{
+    position: relative;
+    text-shadow: 5px 5px 10px black;
+    letter-spacing: 3px;
+    color:#c0392b;
+    font-size: 26px;
+    margin-top: 8%;
+  }
+  
+  .navbar {
+    width: 100%;
+    line-height: 2em;
+    background-color: #c0392b;
+    display: inline-block;
+    text-align: center;
+  }
+  
+  li {
+    list-style: none;
+    display: inline-block;
+  }
+  
+  .navbar a{
+    text-decoration: none;
+    font-size: 12px;
+    font-family: Cambria;
+    font-weight: 500;
+    color: white;
+    padding: 10px;
+    letter-spacing: 3px;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: center;
+  }
+  
+  .navbar a:hover{
+    background-color: white;
+    color: #130f40;
+    border-radius: 20px;
+    border-style: solid;
+  }
+  
+  h2{
+    text-decoration: underline;
+    text-align: center;
+  }
+  
+  .container{
+    display: inline-block;
+  }
+  
+  .Restaurant-info{
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 30px;
+    border-style: solid;
+    border-width: 6px;
+    border-color: #c0392b;
+    color: #c0392b;
+    border-radius: 6px;
+    align-items: center;
+    display: block;
+  }
+  
+  .Restaurant-info:hover{
+    box-shadow: 0px 10px 30px;
+    box-shadow: #c0392b;
+  }
+  
+  .Restaurant-info p{
+    font-size: 20px;
+    font-weight: 600;
+  }
+  
+  #p1{
+    position: relative;
+    margin-top: 12px;
+    margin-bottom: 80px;
+    line-height: 1.7em;
+  }
+  
+  #p2{
+   position: relative;
+   margin-top: 80px;
+   line-height: 1.7em;
+  }
+  
+  #p2 a{
+    color:cornsilk;
+    text-shadow: 5px 5px 10px black;
+  }
+  
+  #p2 a:hover{
+    zoom: 1.5;
+    text-shadow: 5px 5px 10px black;
+  }
+  
+  
+  .test2 {
+    height: 180px;
+    width: 50%;
+    margin-left: 25%; 
+    margin-top: 5%;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 60px;
+    border-color: #c0392b;
+  }
+  
+  .test3,.test5 {
+    height: 175px;
+    width: 175px;
+    border-style: solid;
+    margin-left: 12%;
+    border-width: 3px;
+    border-radius: 130px;
+  }
+
+  .test4{
+    margin-right: 10px;  
+    border-style: solid;
+    height: 175px;
+    width: 175px;
+    border-width: 3px;
+    border-radius: 130px;
+  }
+
+  .Booking-utvalg {
+    width: 96%;
+    margin-left: 2%;
+    margin-right: 10px;
+    border-style: solid;
+    border-width: 6px;
+    border-radius: 6px;
+    margin-top: 30px;
+    color: #c0392b; 
+    font-size: 22px;
+    font-weight: 700;
+  }
+  
+  .Booking-utvalg:hover {
+    box-shadow: 0px 10px 30px;
+  }
+  
+  .Booking-utvalg a{
+    text-shadow: 5px 5px 10px black;
+  }
+  
+  .Booking-utvalg a:hover{
+    zoom: 1.5;
+    text-shadow: 5px 5px 10px black;
+  }
+  
+  .Bryllups-mottakelse {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    padding-top: 50px;
+    align-items: center;
+  }
+  
+  .Bryllups-Info {
+    border-style:dotted;
+    border-radius: 20px;
+    border-width: 4px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: justify; 
+    width: 70%;
+    margin-left: 15%;
+  }
+  
+  
+  
+  .Fest {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    padding-top: 50px;
+    align-items: center;
+  }
+  
+  .Fest-Info {
+    border-style:dotted;
+    border-radius: 20px;
+    border-width: 4px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: justify;
+    width: 70%;
+    margin-left: 15%;
+  }
+  
+  .Konfirmasjonsfest {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    align-items: center;
+  }
+  
+  .Konfirmasjons-Info {
+    border-style:dotted;
+    border-radius: 20px;
+    border-width: 4px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: justify;
+    width: 70%;
+    margin-left: 15%;
+  }
+  
+  .Bryllups-Info a, .Fest-Info a, .Konfirmasjons-Info a{
+    text-decoration: underline;
+    font-style: italic;
+    font-size: 28px;
+    color: azure;
+  }
+  
+  footer {
+    margin-top: 10%;
+    height: 35%;
+    background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+  
+  
+  .Footer-info {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
   text-align: center;
-  display: inline-block;
-  align-items: center;
-}
+  align-items: baseline;
+  }
+  
+  .Links{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 20px;
+    margin-top: 5%;
+    margin-right: 10px;
+    line-height: 2em;
+    font-size: 22px;
+    padding-left: 10%;
+  }
+  
+  .Links a{
+    color: dodgerblue;
+    font-weight: 700;
+    text-decoration: none;
+    padding-top: 40px;
+  }
+  
+  .Links a:hover{
+    zoom: 1.2;
+  }
 
-li {
-  list-style: none;
-  display: inline-block;
-}
+  #twitter-logo, #facebook-logo, #instagram-logo {
+    height: 10%;
+    margin-top: 5%;
+    width: 33%;
+  }
+  
+  #twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
+    zoom: 1.2;
+  }
+  
+  
+  .kart{
+    height: 100%;
+    margin-right: 20%;
+    margin-top: 5%;
+  }
 
-.navbar a{
-  text-decoration: none;
-  font-size: 18px;
-  font-family: Cambria;
-  font-weight: 500;
-  color: white;
-  padding: 20px;
-  letter-spacing: 4px;
-  margin-left: 30px;
-  margin-right: 30px;
-}
+  #adresse-kart{
+    height: 160px;
+    width: 95%;
+    margin-top: 30px;  
+    border: none;
+  }
+  
+  #adresse-kart:hover{
+    zoom: 1.2;
+  }
 
-.navbar a:hover{
-  background-color: white;
-  color: #130f40;
-  border-radius: 20px;
-  border-style: solid;
-}
-
-h2{
-  text-decoration: underline;
-  text-align: center;
-}
-
-.container{
-  display: grid;
-  grid-template-columns: 240px 240px 1fr;
-  margin-top: 50px;
-  line-height: 26px;
-  position: relative;
-}
-
-.Restaurant-info{
-  width: 220px;
-  margin-left: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-top: 30px;
-  border-style: solid;
-  border-width: 6px;
-  border-color: #c0392b;
-  color: #c0392b;
-  border-radius: 6px;
-}
-
-.Restaurant-info:hover{
-  box-shadow: 0px 10px 30px;
-  box-shadow: #c0392b;
-}
-
-.Restaurant-info p{
-  font-size: 20px;
-  font-weight: 600;
-}
-
-#p1{
-  position: relative;
-  margin-top: 12px;
-  margin-bottom: 80px;
-  line-height: 1.7em;
-}
-
-#p2{
- position: relative;
- margin-top: 80px;
- line-height: 1.7em;
-}
-
-#p2 a{
-  color:cornsilk;
-  text-shadow: 5px 5px 10px black;
-}
-
-#p2 a:hover{
-  zoom: 1.5;
-  text-shadow: 5px 5px 10px black;
-}
-
-
-hr {
-  width: 100%;
-}
-
-.test2 {
-  height: 300px;
-  width: 300px;
-  margin-left: 48px;
-  margin-top: 400px;
-  border-style: solid;
-  border-width: 3px;
-  border-radius: 300px;
-  border-color: #c0392b;
-}
-
-.test3,.test4,.test5 {
-  height: 175px;
-  width: 175px;
-  border-style: solid;
-  margin-left: 50px;
-  border-width: 3px;
-  border-radius: 175px;
-}
-
-
-.Booking-utvalg {
-  margin-left: 130px;
-  margin-right: 10px;
-  border-style: solid;
-  border-width: 6px;
-  border-radius: 6px;
-  margin-top: 30px;
-  color: #c0392b; 
-  font-size: 22px;
-  font-weight: 700;
-}
-
-.Booking-utvalg:hover {
-  box-shadow: 0px 10px 30px;
-}
-
-.Booking-utvalg a{
-  text-shadow: 5px 5px 10px black;
-}
-
-.Booking-utvalg a:hover{
-  zoom: 1.5;
-  text-shadow: 5px 5px 10px black;
-}
-
-.Bryllups-mottakelse {
-  display: grid;
-  grid-template-columns: 250px 500px;
-  row-gap: 25px;
-  column-gap: 25px;
-  padding-top: 50px;
-  align-items: center;
-}
-
-.Bryllups-Info {
-  border-style:dotted;
-  border-radius: 20px;
-  border-width: 4px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  text-align: justify; 
-}
-
-
-
-.Fest {
-  display: grid;
-  grid-template-columns: 500px 250px;
-  row-gap: 25px;
-  column-gap: 20px;
-  padding-top: 50px;
-  margin-left: 60px;
-  align-items: center;
-}
-
-.Fest-Info {
-  border-style:dotted;
-  border-radius: 20px;
-  border-width: 4px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  text-align: justify;
-}
-
-.Konfirmasjonsfest {
-  display: grid;
-  grid-template-columns: 250px 500px;
-  row-gap: 25px;
-  column-gap: 25px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  align-items: center;
-}
-
-.Konfirmasjons-Info {
-  border-style:dotted;
-  border-radius: 20px;
-  border-width: 4px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  text-align: justify;
-}
-
-.Bryllups-Info a, .Fest-Info a, .Konfirmasjons-Info a{
-  text-decoration: underline;
-  font-style: italic;
-  font-size: 28px;
-  color: azure;
-}
-
-footer {
-  margin-top: 200px;
-  background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
-  border-style: solid;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-}
-
-
-.Footer-info {
-display: grid;
-grid-template-columns: 1fr 2fr 1fr;
-height: 450px;
-text-align: center;
-align-items: center;
-}
-
-.Links{
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  width: 20px;
-  row-gap: 20px;
-  margin-top: 10px;
-  line-height: 2em;
-  font-size: 35px;
-  padding-left: 20%;
-}
-
-.Links a{
-  color: dodgerblue;
-  font-weight: 700;
-  text-decoration: none;
-  padding-top: 40px;
-}
-
-.Links a:hover{
-  zoom: 1.2;
-}
-
-#twitter-logo, #facebook-logo, #instagram-logo {
-  height: 50px;
-  margin-top: 40px;
-}
-
-#twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
-  zoom: 1.2;
-}
-
-
-.footer-area-3{
-  width: 100px;
-  margin-right: 20%;
-}
-
-
-
-#adresse-kart{
-  height: 200px;
-  margin-top: 30px;  
-  border: none;
-}
-
-#adresse-kart:hover{
-  zoom: 1.2;
 }
