--- a/Side2/CSS/Booking.css
+++ b/Side2/CSS/Booking.css
@@ -5,6 +5,11 @@ body {
     background-color: beige;
 }
 
+/*Stor skjerm--------------------------------------------------------------------------------------------------*/
+
+@media screen 
+and (min-width: 1099px)  {
+    
 .Header-Image {
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
     height: 50vh;
@@ -25,7 +30,6 @@ body {
     font-size: 46px;
     top: 20%;
 }
-
 
 .navbar {
     width: 100%;
@@ -215,9 +219,7 @@ footer {
     width: 100px;
     margin-right: 20%;
 }
-  
-  
-  
+   
 #adresse-kart{
     height: 200px;
     margin-top: 30px;  
@@ -226,4 +228,451 @@ footer {
   
 #adresse-kart:hover{
     zoom: 1.2;
+}
+}
+
+
+/*Medium skjerm----------------------------------------------------------------------------------------------*/
+
+@media screen 
+and (min-width: 700px)
+and (max-width: 1100px) {
+    .Header-Image {
+        background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
+        height: 50vh;
+        width: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+        display: inline-block;
+        text-align: center;
+    }
+      
+    .Main-Title{
+        position: relative;
+        text-shadow: 5px 5px 10px black;
+        letter-spacing: 3px;
+        color:#c0392b;
+        font-size: 46px;
+        top: 20%;
+    }
+    
+    
+    .navbar {
+        width: 100%;
+        line-height: 20%;
+        background-color: #c0392b;
+        text-align: center;
+        display: inline-block;
+        align-items: center;
+    }
+      
+    li {
+        list-style: none;
+        display: inline-block;
+    }
+      
+    .navbar a{
+      display: block;   
+      text-decoration: none;
+      font-size: 18px;
+      font-family: Cambria;
+      font-weight: 500;
+      color: white;
+      padding: 20px;
+      letter-spacing: 4px;
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+      
+    .navbar a:hover{
+        background-color: white;
+        color: #130f40;
+        border-radius: 20px;
+        border-style: solid;
+    }
+    
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 14% 16% 25% 45%;
+        margin-top: 20px;
+        padding: 20px;  
+    }
+    
+    
+    .bilde img {
+        margin-top: 0;
+        height: 90%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 2%;
+        background-color: rgb(191, 172, 149);
+        border-radius: 50%; 
+        
+    }
+    
+    .info{
+        margin-top: 0;
+        text-align: center;
+        width: 100%;
+       
+    }
+    .info p{
+        text-align: center;
+        width: 100%;
+        font-size: 18px;
+        font-weight: 500;
+        margin-top: 2%;
+        line-height: 1.5;
+        
+    }
+    
+    .lokasjon{
+        text-align: center;
+    }
+    
+    .lokasjon iframe{
+        width: 50%;
+        border: none;
+    }
+    
+    .lokasjon iframe:hover{
+        zoom: 1.3;
+    }
+    
+    .booking{
+        width: 60%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 50px;
+        color: black;
+        text-align: center;
+        background-color:  rgb(118, 142, 87);
+        background-image: linear-gradient(90deg,  rgb(118, 142, 87),rgb(198, 214, 177) );
+        border-radius: 4px;
+        
+    }
+    
+    .booking form{
+       background-color: white;
+       border-radius: 8px;
+       
+    }
+    
+    .booking label{
+        width: 270px;
+        display: inline-block;
+        text-align: left;
+        padding: 10px;
+    }
+    
+    
+    .booking input, .booking select{
+        width: 250px;
+        height: 30px;
+        display: inline-block;
+        margin-bottom: 30px;
+        border-radius: 4px;
+        border: none;
+        background-color:rgb(198, 214, 177);
+    }
+    
+    
+    footer {
+        margin-top: 300px;
+        background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+        border-style: solid;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+      
+      
+    .Footer-info {
+        display: grid;
+        grid-template-columns: 23% 23% 58%;
+        column-gap: 2%;
+        height: 450px;
+        text-align: center;
+        align-items: center;
+    }
+      
+    .Links{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        width: 20px;
+        row-gap: 20px;
+        margin-top: 10px;
+        line-height: 2em;
+        font-size: 18px;
+        padding-left: 20%;
+        }
+      
+    .Links a{
+        color: dodgerblue;
+        font-weight: 700;
+        text-decoration: none;
+        padding-top: 40px;
+    }
+      
+    .Links a:hover{
+        zoom: 1.2;
+    }
+      
+    #twitter-logo, #facebook-logo, #instagram-logo {
+        height: 20px;
+        margin-top: 40px;
+    }
+      
+    #twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
+        zoom: 1.2;
+    }
+      
+      
+    .footer-area-3{
+        width: 100px;
+        margin-right: 20%;
+    }
+      
+      
+      
+    #adresse-kart{
+        height: 50%;
+        width: 50%;
+        margin-top: 20px;  
+        border: none;
+    }
+      
+    #adresse-kart:hover{
+        zoom: 1.2;
+}
+    
+}
+
+
+/*Liten Skjerm---------------------------------------------------------------------------------------------------*/
+
+@media screen 
+and (max-width: 699px) {
+
+    .Header-Image {
+        background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side1/Images/Nature.png);
+        height: 50vh;
+        width: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+        display: inline-block;
+        text-align: center;
+    }
+      
+    .Main-Title{
+        position: relative;
+        text-shadow: 5px 5px 10px black;
+        letter-spacing: 3px;
+        color:#c0392b;
+        font-size: 46px;
+        top: 20%;
+    }
+    
+    
+    .navbar {
+        width: 100%;
+        line-height: 20%;
+        background-color: #c0392b;
+        text-align: center;
+        display: inline-block;
+        align-items: center;
+    }
+      
+    li {
+        list-style: none;
+        display: inline-block;
+    }
+      
+    .navbar a{
+      display: block;   
+      text-decoration: none;
+      font-size: 18px;
+      font-family: Cambria;
+      font-weight: 500;
+      color: white;
+      padding: 20px;
+      letter-spacing: 4px;
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+      
+    .navbar a:hover{
+        background-color: white;
+        color: #130f40;
+        border-radius: 20px;
+        border-style: solid;
+    }
+    
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 11% 19% 25% 45%;
+        margin-top: 20px;
+        padding: 20px;  
+    }
+    
+    
+    .bilde img {
+        margin-top: 0;
+        height: 90%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 2%;
+        background-color: rgb(191, 172, 149);
+        border-radius: 50%; 
+        
+    }
+    
+    .info{
+        margin-top: 0;
+        text-align: center;
+        width: 100%;
+       
+    }
+    .info p{
+        text-align: center;
+        width: 100%;
+        font-size: 15px;
+        font-weight: 500;
+        margin-top: 2%;
+        line-height: 1.5;
+        
+    }
+    
+    .lokasjon{
+        margin-top: ;
+        text-align: center;
+    }
+    
+    .lokasjon iframe{
+        width: 60%;
+        border: none;
+    }
+    
+    .lokasjon iframe:hover{
+        zoom: 1.3;
+    }
+    
+    .booking{
+        width: 60%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 50px;
+        color: black;
+        text-align: center;
+        background-color:  rgb(118, 142, 87);
+        background-image: linear-gradient(90deg,  rgb(118, 142, 87),rgb(198, 214, 177) );
+        border-radius: 4px;
+        
+    }
+    
+    .booking form{
+       background-color: white;
+       border-radius: 8px;
+       
+    }
+    
+    .booking label{
+        width: 270px;
+        display: inline-block;
+        text-align: left;
+        padding: 10px;
+    }
+    
+    
+    .booking input, .booking select{
+        width: 200px;
+        height: 30px;
+        display: inline-block;
+        margin-bottom: 30px;
+        border-radius: 4px;
+        border: none;
+        background-color:rgb(198, 214, 177);
+    }
+    
+    
+    footer {
+        margin-top: 300px;
+        background-image: linear-gradient(#c0392b, rgb(248, 114, 114));
+        border-style: solid;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+      
+      
+    .Footer-info {
+        display: grid;
+        grid-template-columns: 23% 23% 58%;
+        column-gap: 2%;
+        height: 450px;
+        text-align: center;
+        align-items: center;
+    }
+      
+    .Links{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        width: 20px;
+        row-gap: 20px;
+        margin-top: 10px;
+        line-height: 2em;
+        font-size: 18px;
+        padding-left: 20%;
+        }
+      
+    .Links a{
+        color: dodgerblue;
+        font-weight: 700;
+        text-decoration: none;
+        padding-top: 40px;
+    }
+      
+    .Links a:hover{
+        zoom: 1.2;
+    }
+      
+    #twitter-logo, #facebook-logo, #instagram-logo {
+        height: 20px;
+        margin-top: 40px;
+    }
+      
+    #twitter-logo:hover, #facebook-logo:hover, #instagram-logo:hover{
+        zoom: 1.2;
+    }
+      
+      
+    .footer-area-3{
+        width: 100px;
+        margin-right: 20%;
+    }
+      
+      
+      
+    #adresse-kart{
+        height: 50%;
+        width: 50%;
+        margin-top: 20px;  
+        border: none;
+    }
+      
+    #adresse-kart:hover{
+        zoom: 1.2;
+}
 }
