--- a/Side4/CSS/fil.css
+++ b/Side4/CSS/fil.css
@@ -1,3 +1,4 @@
+@media screen and  (min-width: 1250px){
 body {
   height: 100%;
   margin: 0;
@@ -84,7 +85,7 @@ li {
 .container{
   display: grid;
   grid-template-rows: repeat(2, 1000px);
-  grid-template-columns: repeat(1fr 1fr 2fr);
+  grid-template-columns: repeat(1fr 1fr 1fr); 
   column-rule: #130f40;
   column-rule-style: solid;
   row-gap: 20px;
@@ -97,18 +98,21 @@ h2{
   text-align: center;
   font-size: 32px;
   line-height: 1.3em;
+  color: dodgerblue;
 }
 
 .grid1{
-  grid-column-start: 3;
+  grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
+  width: 75%;
+  height: 100%;
+  margin-left: 10%;
   margin-top: 10px;
   line-height: 1.7em;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 15px;
-  width: 90%;
 }
 
 .grid2{
@@ -121,26 +125,26 @@ h2{
 
 .grid3{
   grid-column-start: 1;
-  grid-column-end: 1;
+  grid-column-end: 2;
   grid-row-start: 2;
-  grid-row-end: 2;
-  margin-top: 10px;
-  margin-left: 20%;
+  grid-row-end: 3;
+  width: 80%;
+  margin-left: 10%; 
+  margin-top: 40px;
   line-height: 1.7em;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 15px;
-  width: 90%;
 }
 
 
 
 .grid4{
-grid-column-start: 3;
+grid-column-start: 2;
 grid-column-end: 3;
 grid-row-start: 2;
 grid-row-end: 2;
 align-items: center;
-margin-right: 30%;
+
 }
 
 .grid1:hover, .grid3:hover{
@@ -161,12 +165,14 @@ margin-right: 30%;
 }
 
 .grid-img1{
-  height: 520px;
-  width: 440px;
+  height: 420px;
+  width: 340px;
+  margin-right: 30px;
+  margin-left: 25%;
   border-style: solid;
   border-radius: 20px;
-  margin-top: 35%;
-  margin-left: 25%;
+  margin-top: 50%;
+  position: sticky;
 }
 
 .grid-img1:hover{
@@ -174,19 +180,22 @@ margin-right: 30%;
 }
 
 .grid-img2{
-  height: 520px;
-  width: 440px;
-  position:relative;
-  left: 35%;
-  margin-top: 35%;
+  height: 420px;
+  width: 340px;
+  margin-left: 25%;
+  position: relative;
   border-style: solid;
   border-radius: 20px;
+  margin-top: 50%;  
 }
 
 .grid-img2:hover{
   zoom: 1.05;
 }
 
+footer{
+  height: 200px;
+}
 
 .footer-info{
   margin-top: 25px;
@@ -196,36 +205,207 @@ margin-right: 30%;
   justify-content: space-between;
   align-items: center;
 }
-
-.Links{
-  width: 100px;
-  margin-left: 100px;
-  margin-top: 50px;
-  line-height: 2em;
-  font-size: 25px;
 }
 
-footer{
-  height: 200px;
-  margin-top: 0;
-}
-
-.Links a{
-  color: dodgerblue;
-  font-weight: 700;
-  text-decoration: none;
-}
-
-.Socials{
-  width: 100px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.footer-area-3{
-  width: 100px;
-  margin-right: 100px;
+@media screen and (max-width: 1249px)
+{
+  body {
+    height: 100%;
+    margin: 0;
+    background-image: linear-gradient(red,green,blue,white);
+  }
+  
+  
+  .Header-Image{
+   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Side4/Images/giphy.gif);
+   height: 50vh;
+   width: 100%;
+   background-position: center;
+   background-repeat:no-repeat;
+   background-size: cover;
+   position: relative;
+   text-align: center;
+   display: inline-block;
+   margin-bottom: 20px;
+  }
+  
+  .Main-Title{
+    position: relative;
+    letter-spacing: 3px;
+    color: dodgerblue;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    letter-spacing: 5px;
+    text-shadow: 5px 5px 10px black;
+    top: 80%;
+  }
+  
+  .Main-Title:hover{
+    zoom: 1.145; 
+    color: rgb(57, 103, 255);
+    font-family: fantasy;
+  }
+  
+  .Navbar {
+    width: 100%;
+    line-height: 2.3em;
+    background-color: none;
+    text-align: center;
+    display: inline-block;
+    left: 0;
+    right: 0;
+    align-items: center;
+  }
+  
+  li {
+    list-style: none;
+    display: inline-block;
+  }
+  
+  .Navbar a{
+    text-decoration: none;
+    font-size: 22px;
+    font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 700;
+    color: dodgerblue;
+    text-shadow: 7px 7px 12px black;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
+    letter-spacing: 4px;
+    margin: 30px 30px;
+  }
+  
+  .Navbar a:hover{
+    background-image: linear-gradient(to bottom left, red, yellow);
+    color: #130f40;
+    border-radius: 20px;
+    border-style: solid;
+    transition: 0.2s;
+    opacity: 0.6;
+    color: rgb(57, 103, 255);
+    font-family: fantasy;
+    text-decoration: underline;
+  }
+  
+  .container{
+    display: grid;
+    grid-template-rows: repeat(2fr 1fr 2fr 1fr);
+    grid-template-columns: repeat(1fr 2fr 1fr);
+    column-rule: #130f40;
+    column-rule-style: solid;
+    row-gap: 100px;
+    text-align: justify;
+    font-size: 16px; 
+    letter-spacing: 2px;
+  }
+  
+  h2{
+    text-align: center;
+    font-size: 32px;
+    line-height: 1.3em;
+  }
+  
+  .grid1{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    width: 80%;
+    height: 80%;
+    margin-left: 10%; 
+    margin-top: 10%;
+    line-height: 1.7em;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 15px;
+  }
+  
+  .grid2{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
+    align-items: center;
+  }
+  
+  .grid3{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 3;
+    width: 80%;
+    margin-left: 10%; 
+    line-height: 1.7em;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 15px;
+  }
+  
+  
+  
+  .grid4{
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 4;
+  grid-row-end: 4;
+  align-items: center;
+  
+  }
+  
+  .grid1:hover, .grid3:hover{
+    zoom: 1.1;
+    color: #130f40;
+    font-family:fantasy;
+    font-size: 15px;
+    line-height: 1.6em;
+  }
+  
+  .grid1 a, .grid3 a{
+    color:rgb(26, 106, 255);
+    text-decoration: none;
+  }
+  
+  .grid1 a:hover, .grid3 a:hover{
+    zoom: 1.2;
+  }
+  
+  .grid-img1{
+    height: 70%;
+    width: 70%;
+    margin-left: 15%;
+    border-style: solid;
+    border-radius: 20px;
+  }
+  
+  .grid-img1:hover{
+    zoom: 1.05;
+  }
+  
+  .grid-img2{
+    height: 70%;
+    width: 70%;
+    margin-left: 15%;
+    border-style: solid;
+    border-radius: 20px;
+    margin-top: 10%; 
+  }
+  
+  .grid-img2:hover{
+    zoom: 1.05;
+  }
+  
+  footer{
+    height: 200px;
+  }
+  
+  .footer-info{
+    margin-top: 25px;
+    border-top: dotted 8px dodgerblue; 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 @media (max-width: 500px){
